fix default msg

--- a/tmpl/page.tmpl
+++ b/tmpl/page.tmpl
@@ -39,7 +39,7 @@ h1, p, footer {
       <label for="story">Message</label>
     </div>
     <div class="from-item">
-      <textarea id="msg" name="msg" rows="5" cols="33" maxlength="100" requierd>Hello world.</textarea>
+      <textarea id="msg" name="msg" rows="5" cols="33" maxlength="100" requierd>잘 보고 갑니다</textarea>
     </div>
     <div class="from-item">
       <label for="name">Name or E-mail</label>
