fix broken image

--- a/tmpl/page.tmpl
+++ b/tmpl/page.tmpl
@@ -26,7 +26,7 @@ h1, p, footer {
 
 <body>
 <h1 class="title">{{.Title}}</h1>
-<p class="img"><img src="{{.Root}}img/{{.Img}}"></p>
+<p class="img"><img src="{{.Img}}"></p>
 
 
 {{if .Success}}
