--- a/tmpl/page.tmpl
+++ b/tmpl/page.tmpl
@@ -7,7 +7,7 @@
   <meta name="author" content="Homin Lee">
   <meta name="description" content="Homin.dev web sites">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://homin.dev/asset/tachyons.min.css">
+  <link rel="stylesheet" href="https://homin.dev/asset/css/tachyons.min.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9322146642801439"
      crossorigin="anonymous"></script>
 </head>
