--- a/tmpl/page.tmpl
+++ b/tmpl/page.tmpl
@@ -12,7 +12,7 @@
      crossorigin="anonymous"></script>
 </head>
 <body class="tc">
-<h1 class="f1 lh-title pa2">{{.Title}}</h1>
+<h1 class="f1 lh-title">{{.Title}}</h1>
 <img src="{{.Img}}">
 
 {{if .Success}}
