--- a/tmpl/page.tmpl
+++ b/tmpl/page.tmpl
@@ -39,7 +39,7 @@
 <p class="f1"></p>
 
 <footer class="bottom-0 w-100 pa2">
-  <p class="ma0"><a class="f4" href="https://homin.dev/support">{{.LastWords}}</a></p>
+  <p class="ma0 f4"><a href="https://homin.dev/support" class="link underline-hover navy hover-orange">{{.LastWords}}</a></p>
   <small>© Homin Lee &lt;ff4500@gmail.com&gt;; All rights reserved.</small>
 </footer>
 </body>
